--- a/index.html
+++ b/index.html
@@ -6,4 +6,15 @@
 			            
 			            </span>
 	          		</h1>
-				</div><p style="text-align: center;">I'm more or less retarded.&nbsp;&nbsp;</p><p style="text-align: center;">Currently learning:rust,svelte.</p><p style="text-align: center;"></p><p style="text-align: center;">projects: doesdev.me</p><div class="social-icons" style="color: var(--bs-pink);background: var(--bs-pink);"><a href="https://twitter.com/Pandarose_ExE"><i class="icon ion-social-twitter-outline" style="background: rgb(208,30,118);color: #fcfeff;border-color: rgb(135,33,83);"></i></a><a href="https://archlinux.org/"><i class="icon ion-social-tux" style="background: rgb(208,30,118);color: #fcfeff;border-color: rgb(135,33,83);"></i></a><a href="https://github.com/Pandaroses"><i class="icon ion-social-github-outline" style="background: rgb(208,30,118);color: #fcfeff;border-color: rgb(135,33,83);"></i></a><a href="youtube.com/Pandarose_"><i class="icon ion-social-youtube-outline" style="background: rgb(208,30,118);color: #fcfeff;border-color: rgb(135,33,83);"></i></a></div><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script><script src="assets/js/script.min.js"></script></body></html>
+				</div><p style="text-align: center;">I'm more or less retarded.&nbsp;&nbsp;</p><p style="text-align: center;">Currently learning:rust,svelte.</p><p style="text-align: center;"></p><p style="text-align: center;">projects: doesdev.me</p><div class="social-icons" style="color: var(--bs-pink);background: var(--bs-pink);"><a href="https://twitter.com/Pandarose_ExE"><i class="icon ion-social-twitter-outline" style="background: rgb(208,30,118);color: #fcfeff;border-color: rgb(135,33,83);"></i></a><a href="https://archlinux.org/"><i class="icon ion-social-tux" style="background: rgb(208,30,118);color: #fcfeff;border-color: rgb(135,33,83);"></i></a><a href="https://github.com/Pandaroses"><i class="icon ion-social-github-outline" style="background: rgb(208,30,118);color: #fcfeff;border-color: rgb(135,33,83);"></i></a><a href="youtube.com/Pandarose_"><i class="icon ion-social-youtube-outline" style="background: rgb(208,30,118);color: #fcfeff;border-color: rgb(135,33,83);"></i></a></div><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script><script src="assets/js/script.min.js"></script>
+			<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="/__/firebase/8.7.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="/__/firebase/8.7.0/firebase-analytics.js"></script>
+
+<!-- Initialize Firebase -->
+<script src="/__/firebase/init.js"></script>
+			
+			</body></html>
