--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
-<!DOCTYPE html><html lang="en" style="background: var(--bs-pink);"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>Untitled</title><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"><link rel="stylesheet" href="assets/css/styles.min.css"></head><body class="font-monospace text-dark flex-grow-0 align-self-center" style="background: var(--bs-pink);"><section class="features-blue"></section><section class="projects-horizontal" style="background: var(--bs-pink);"></section>				<div class="caption v-middle text-center">
-					<h1 class="cd-headline clip">
-			            <span class="blc">I'm | </span>
-			            <span class="cd-words-wrapper">
-			              <b class="is-visible">Gosha</b>
-			            
-			            </span>
-	          		</h1>
-				</div><p style="text-align: center;">I'm more or less retarded.&nbsp;&nbsp;</p><p style="text-align: center;">Currently learning:rust,svelte.</p><p style="text-align: center;"></p><p style="text-align: center;">projects: doesdev.me</p><div class="social-icons" style="color: var(--bs-pink);background: var(--bs-pink);"><a href="https://twitter.com/Pandarose_ExE"><i class="icon ion-social-twitter-outline" style="background: rgb(208,30,118);color: #fcfeff;border-color: rgb(135,33,83);"></i></a><a href="https://archlinux.org/"><i class="icon ion-social-tux" style="background: rgb(208,30,118);color: #fcfeff;border-color: rgb(135,33,83);"></i></a><a href="https://github.com/Pandaroses"><i class="icon ion-social-github-outline" style="background: rgb(208,30,118);color: #fcfeff;border-color: rgb(135,33,83);"></i></a><a href="https://youtube.com/Pandarose_"><i class="icon ion-social-youtube-outline" style="background: rgb(208,30,118);color: #fcfeff;border-color: rgb(135,33,83);"></i></a></div><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script><script src="assets/js/script.min.js"></script>
+<!DOCTYPE html>
+<html>
 
-			</body></html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>saved</title>
+  <link rel="stylesheet" href="https://stackedit.io/style.css" />
+</head>
+
+<body class="stackedit">
+  <div class="stackedit__html"><h1 id="case-studies">Case Studies</h1>
+<h2 id="solaris">Solaris</h2>
+<p>Solaris is a solar panel calculator, it uses React for the frontend and incorporates tailwindCSS , typescript and html. supports multiple languages, reactive layout for mobile and desktop.<br>
+<img src="https://media.discordapp.net/attachments/563966858462625822/1082677585244336219/image.png?width=1238&amp;height=597" alt="solaris"></p>
+<h2 id="floppa-notes">Floppa Notes</h2>
+<p>Floppa notes is a smart and minimal note taking app. it uses react for the frontend, rust for the backend, uses GitHub OAuth2 for authentication, and has MongoDB as the database for storing notes incorporates a home-built text editor. uses REST API to communicate with the backend<br>
+<img src="https://media.discordapp.net/attachments/563966858462625822/1082679062549499904/image.png?width=1238&amp;height=597" alt="Floppa Notes"></p>
+<h2 id="linux">Linux</h2>
+<p>experience with running Linux for personal use and inside a VPS.<br>
+1. website hosting<br>
+2. database hosting<br>
+3. self-hosting git instances<br>
+4. VPN hosting<br>
+5. hosting Docker containers</p>
+</div>
+</body>
+
+</html>
+
